--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.12.4"
+streamlit = "^1.37.0"
 
 [tool.poetry.dev-dependencies]
 black = "^24.4.2"
