--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ mypy = "^1.11.1"
 isort = "^5.13.2"
 pre-commit = "^3.8.0"
 pytest = "^8.3.3"
+pytest-cov = "^3.0.0"
 
 [tool.black]
 line-length = 88
