--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,24 +16,43 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.12'
+
+      - name: Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+          echo 'export PATH="$HOME/.local/bin:$PATH"' >> $GITHUB_ENV
+          poetry --version
+
+      - name: Install all dependencies (including dev)
+        run: |
+          poetry install
+
+      - name: Run pre-commit hooks
+        run: |
+          poetry run pre-commit run --all-files
+
+      - name: Run tests with pytest
+        run: |
+          poetry run pytest --cov=src tests/
+
       - name: Build Docker image
         run: |
-          docker build -t streamlit-quiz-app .
+          docker build -t my_streamlit_app .
 
       - name: Run Docker container
         run: |
-          docker run -d -p 8501:8501 --name streamlit-quiz-container streamlit-quiz-app
+          docker run -d -p 8501:8501 --name test_app my_streamlit_app
 
       - name: Test Docker container
         run: |
           sleep 10  # Wait for the app to start
           curl -f http://localhost:8501  # Check if the app is running
 
-      - name: Run tests inside Docker container
-        run: |
-          docker exec streamlit-quiz-container poetry run pytest --cov=src tests/
-
       - name: Stop Docker container
         run: |
-          docker stop streamlit-quiz-container
-          docker rm streamlit-quiz-container
+          docker stop test_app
+          docker rm test_app
