--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Run pre-commit hooks
         run: |
-          poetry run pre-commit .
+          poetry run pre-commit run
 
       - name: Run tests with pytest
         run: |
