--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ isort = "^5.13.2"
 pre-commit = "^3.8.0"
 pytest = "^8.3.3"
 pytest-cov = "^3.0.0"
+unittest2 = "^1.1.0"
 
 [tool.black]
 line-length = 88
