update tests to account for randomization

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,12 @@ streamlit = "^1.37.0"
 black = "^24.4.2"
 flake8 = "^7.1.0"
 pylint = "^3.2.6"
-mypy = "^1.11.1"
 isort = "^5.13.2"
+mypy = "^1.11.1"
 pre-commit = "^3.8.0"
 pytest = "^8.3.3"
 pytest-cov = "^3.0.0"
+random2 = "^1.0.2"
 unittest2 = "^1.1.0"
 
 [tool.black]
