--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,10 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
+DateTime = "^5.5"
 python = "^3.12.4"
+pytz = "^2024.2"
+random2 = "^1.0.2"
 streamlit = "^1.37.0"
 
 [tool.poetry.dev-dependencies]
@@ -20,7 +23,6 @@ mypy = "^1.11.1"
 pre-commit = "^3.8.0"
 pytest = "^8.3.3"
 pytest-cov = "^3.0.0"
-random2 = "^1.0.2"
 unittest2 = "^1.1.0"
 
 [tool.black]
