--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  ci: 
+  CI: 
     runs-on: ubuntu-latest
 
     steps:
@@ -59,9 +59,9 @@ jobs:
           docker stop test_app
           docker rm test_app
 
-  deploy:
+  CD:
     runs-on: ubuntu-latest
-    needs: ci
+    needs: ci 
 
     steps:
     - name: Checkout code
@@ -70,17 +70,19 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Login to Railway with Docker
-      run: |
-        echo "${{ secrets.RAILWAY_TOKEN }}" | docker login --username=railway --password-stdin registry.railway.app
-
-    - name: Build and push Docker image to Railway
+    - name: Log in to Docker Hub
       env:
-        PROJECT_ID: deac629a-f954-4a10-b68b-17efbb6ac790
+        DOCKER_USER: ${{ secrets.DOCKER_USER }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      run: |
+        echo "${{ env.DOCKER_PASSWORD }}" | docker login --username ${{ env.DOCKER_USER }} --password-stdin
+
+    - name: Build and push Docker image to Docker Hub
+      env:
         IMAGE_NAME: streamlit-quiz-app
       run: |
-        docker build -t registry.railway.app/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:latest .
-        docker push registry.railway.app/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:latest
+        docker build -t ${{ env.DOCKER_USER }}/${{ env.IMAGE_NAME }}:latest .
+        docker push ${{ env.DOCKER_USER }}/${{ env.IMAGE_NAME }}:latest
 
     - name: Deploy to Railway
       env:
@@ -88,7 +90,3 @@ jobs:
       run: |
         curl -H "Authorization: Bearer ${{ secrets.RAILWAY_TOKEN }}" \
         -X POST https://backboard.railway.app/webhook/deploy/${{ env.PROJECT_ID }}
-
-    - name: Smoke test after deployment
-      run: |
-        curl -f https://webgame-production.up.railway.app/ || echo "App not reachable!"
