--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI and CD Pipeline
+name: CI Pipeline
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  CI: 
+  Build: 
     runs-on: ubuntu-latest
 
     steps:
@@ -59,9 +59,9 @@ jobs:
           docker stop test_app
           docker rm test_app
 
-  CD:
+  Deploy:
     runs-on: ubuntu-latest
-    needs: ci 
+    needs: Build
 
     steps:
     - name: Checkout code
@@ -71,23 +71,17 @@ jobs:
       uses: docker/setup-buildx-action@v2
 
     - name: Log in to Docker Hub
-      env:
-        DOCKER_USER: ${{ secrets.DOCKER_USER }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-        echo "${{ env.DOCKER_PASSWORD }}" | docker login --username ${{ env.DOCKER_USER }} --password-stdin
+        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username ${{ secrets.DOCKER_USER }} --password-stdin
 
     - name: Build and push Docker image to Docker Hub
       env:
-        DOCKER_USER: ${{ secrets.DOCKER_USER }}
         IMAGE_NAME: streamlit-quiz-app
       run: |
-        docker build -t ${{ env.DOCKER_USER }}/${{ env.IMAGE_NAME }}:latest .
-        docker push ${{ env.DOCKER_USER }}/${{ env.IMAGE_NAME }}:latest
+        docker build -t ${{ secrets.DOCKER_USER }}/${{ env.IMAGE_NAME }}:latest .
+        docker push ${{ secrets.DOCKER_USER }}/${{ env.IMAGE_NAME }}:latest
 
     - name: Deploy to Railway
-      env:
-        PROJECT_ID: deac629a-f954-4a10-b68b-17efbb6ac790
       run: |
         curl -H "Authorization: Bearer ${{ secrets.RAILWAY_TOKEN }}" \
-        -X POST https://backboard.railway.app/webhook/deploy/${{ env.PROJECT_ID }}
+        -X POST https://backboard.railway.app/webhook/deploy/${{ secrets.PROJECT_ID }}
