--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,37 @@
-name: CI Pipeline
+name: CI and CD Pipeline
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
-      - main
+      - 'main'       
+      - 'release/**' 
 
 jobs:
-  Build: 
+  # Validation to ensure only release/** branches can create PRs into main
+  validate-pr:
     runs-on: ubuntu-latest
+    name: Validate PR Source and Target Branches
+
+    steps:
+      - name: Check if PR is from release/** into main
+        run: |
+          SOURCE_BRANCH=$(echo ${{ github.event.pull_request.head.ref }})
+          TARGET_BRANCH=$(echo ${{ github.event.pull_request.base.ref }})
+
+          echo "Source Branch: $SOURCE_BRANCH"
+          echo "Target Branch: $TARGET_BRANCH"
+
+          # Check if the target is the main branch and the source is NOT a release/** branch
+          if [[ "$TARGET_BRANCH" == "main" && "$SOURCE_BRANCH" != release/* ]]; then
+            echo "Error: Only release/** branches can create PRs into main."
+            exit 1
+          fi
+
+  build-test-deploy-dev: 
+    runs-on: ubuntu-latest
+    needs: validate-pr
+    if: success()
+    name: Build, Test, and Deploy to Development
 
     steps:
       - name: Checkout code
@@ -59,9 +80,25 @@ jobs:
           docker stop test_app
           docker rm test_app
 
-  Deploy:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Docker Hub
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username ${{ secrets.DOCKER_USER }} --password-stdin
+
+      - name: Build and push Docker image to Docker Hub
+        env:
+          IMAGE_NAME: streamlit-quiz-app-DEV
+        run: |
+          docker build -t ${{ secrets.DOCKER_USER }}/${{ env.IMAGE_NAME }}:latest .
+          docker push ${{ secrets.DOCKER_USER }}/${{ env.IMAGE_NAME }}:latest
+
+  deploy-to-prd:
     runs-on: ubuntu-latest
-    needs: Build
+    needs: build-test-deploy-dev
+    if: github.event.pull_request.base.ref == 'main' && startsWith(github.event.pull_request.head.ref, 'release/')
+    name: Deploy to Production
 
     steps:
     - name: Checkout code
@@ -76,7 +113,7 @@ jobs:
 
     - name: Build and push Docker image to Docker Hub
       env:
-        IMAGE_NAME: streamlit-quiz-app
+        IMAGE_NAME: streamlit-quiz-app-PRD
       run: |
         docker build -t ${{ secrets.DOCKER_USER }}/${{ env.IMAGE_NAME }}:latest .
         docker push ${{ secrets.DOCKER_USER }}/${{ env.IMAGE_NAME }}:latest
