--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,9 +98,9 @@ jobs:
         run: npm i -g @railway/cli
 
       - name: Deploy to Railway
-        run: railway up
+        run: railway up --project-id ${{ secrets.PROJECT_ID }} --environment development
         env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN_DEV }}
 
   deploy-to-prd:
     runs-on: ubuntu-latest
@@ -130,6 +130,6 @@ jobs:
       run: npm i -g @railway/cli
 
     - name: Deploy to Railway
-      run: railway up
+      run: railway up --project-id ${{ secrets.PROJECT_ID }} --environment production
       env:
-        RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+        RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN_PRD }}
