--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,9 +98,11 @@ jobs:
         run: npm i -g @railway/cli
 
       - name: Deploy to Railway
-        run: railway up --project-id ${{ secrets.PROJECT_ID }} --environment development
+        run: railway up
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN_DEV }}
+          RAILWAY_PROJECT_ID: ${{ secrets.PROJECT_ID }}
+          RAILWAY_ENVIRONMENT: development
 
   deploy-to-prd:
     runs-on: ubuntu-latest
@@ -133,3 +135,5 @@ jobs:
       run: railway up --project-id ${{ secrets.PROJECT_ID }} --environment production
       env:
         RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN_PRD }}
+        RAILWAY_PROJECT_ID: ${{ secrets.PROJECT_ID }}
+        RAILWAY_ENVIRONMENT: production
